[package]
name = "nacos-client"
version = "0.1.0"
edition = "2018"

[dependencies]
chrono = "0.4.19"
md5 = "0.7.0"
state = {version = "0.5.2", features = ["tls"]}
bytes = "1.1.0"
tonic = {version = "0.6.1", features = ["tls"]}
prost = {version = "0.9.0", features = ["no-recursion-limit"]}
prost-types = "0.9.0"
local-ip-address = "0.4.4"
futures-util = "0.3.19"
async-stream = "0.3.2"

[dependencies.nacos-common]
path = "../nacos-common"
version = "0.1.0"

[dependencies.nacos-proto]
path = "../nacos-proto"
version = "0.1.0"

[dependencies.anyhow]
version = "1.0.51"

[dependencies.config]
version = "0.11.0"
features = ["yaml"]

[dependencies.lazy_static]
version = "1.4.0"

[dependencies.pretty_env_logger]
version = "0.4.0"

[dependencies.log]
version = "0.4.14"

[dependencies.reqwest]
version = "0.11.7"
features = ["json", "gzip"]

[dependencies.serde_json]
version = "1.0.72"

[dependencies.serde]
version = "1.0.130"
features = ["derive"]

[dependencies.tokio]
version = "1.14.0"
features = ["full"]

[dependencies.getset]
version = "0.1.2"

[dependencies.trait-async]
version = "0.1.24"

#[dependencies.nacos-config-derive]
#path = "../nacos-config-derive"